Obsidian: GPUCache borrado, IoT: Apuntes de señales completados

--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -2,5 +2,7 @@
   "spellcheck": false,
   "showLineNumber": true,
   "vimMode": true,
-  "alwaysUpdateLinks": true
+  "alwaysUpdateLinks": true,
+  "readableLineLength": false,
+  "showIndentGuide": true
 }
