LogicaC: Reporte practica 3

--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -4,5 +4,12 @@
   "vimMode": true,
   "alwaysUpdateLinks": true,
   "readableLineLength": false,
-  "showIndentGuide": true
+  "showIndentGuide": true,
+  "pdfExportSettings": {
+    "includeName": false,
+    "pageSize": "Letter",
+    "landscape": false,
+    "margin": "0",
+    "downscalePercent": 100
+  }
 }
