Deteccion: Apuntes hasta snort

--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -1,5 +1,6 @@
 {
   "accentColor": "#fd1c1c",
   "cssTheme": "",
-  "theme": "obsidian"
+  "theme": "obsidian",
+  "monospaceFontFamily": "Liberation Mono"
 }
