Rax2:radare2 listo

--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -3,7 +3,7 @@
   "showLineNumber": true,
   "vimMode": true,
   "alwaysUpdateLinks": true,
-  "readableLineLength": false,
+  "readableLineLength": true,
   "showIndentGuide": true,
   "pdfExportSettings": {
     "includeName": false,
